[tool.poetry]
name = "timecheck"
version = "0.1.0"
description = ""
authors = ["Lucy Hancock <lucy@leh.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ntplib = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
timecheck = "timecheck.app:run"